--- a/.github/workflows/sad.yml
+++ b/.github/workflows/sad.yml
@@ -1,20 +1,20 @@
-name: update sad posts
+name: Update Sad Posts
 
 on:
   schedule:
-    - cron: '0 * * * *'
-  workflow_dispatch:
+    - cron: '0 * * * *'  # كل ساعة
+  workflow_dispatch:     # يسمح بالتشغيل اليدوي
 
 jobs:
   update:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout repository
+      - name: Checkout repository with token
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          fetch-depth: 0
+          fetch-depth: 0  # مهم لعمليات Git اللاحقة
       
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -27,7 +27,7 @@ jobs:
       - name: Run script
         run: python scripts/sad/fetch_posts.py
       
-      - name: Commit changes
+      - name: Commit and push changes
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
